<resources>
    <string name="app_name">DCHeroes</string>
    <string name="batman">Batman</string>
    <string name="nombre">Bruce Wayne</string>
    <string name="imagen">Imagen_batman</string>
    <string name="descripcion">In the name of his murdered parents, Bruce Wayne wages eternal war on the criminals of Gotham City. He is vengeance. He is the night. He is Batman.</string>
    <string name="descripcion_dos">One of the most iconic fictional characters in the world, Batman has dedicated his life to an endless crusade, a war on all criminals in the name of his murdered parents, who were taken from him when he was just a child. Since that tragic night, he has trained his body and mind to near physical perfection to be a self-made Super Hero. He\'s developed an arsenal of technology that would put most armies to shame. And he\'s assembled teams of his fellow DC Super Heroes, like the Justice League, the Outsiders and Batman, Incorporated.</string>
    <string name="descripcion_tres">A playboy billionaire by day, Bruce Wayne’s double life affords him the comfort of a life without financial worry, a loyal butler-turned-guardian and the perfect base of operations in the ancient network of caves beneath his family’s sprawling estate. By night, however, he sheds all pretense, dons his iconic scalloped cape and pointed cowl and takes to the shadowy streets, skies and rooftops of Gotham City.</string>
    <string name="registro">Registro de un Superheroe</string>
    <string name="registrar">registrar</string>
    <string name="heroe_name">Nombre:</string>
    <string name="info">"Nombre: %s",\n genero : %s,\n Estatura : %f , \n Poderes: %s,\n Ciudad: %s </string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="label_poderes">Poderes</string>
    <string name="super_fuerza">Super Fuerza</string>
    <string name="velocidad">Super velocidad</string>
    <string name="telequinsesis">Telequinesis</string>
    <string name="ciudad_nacimiento">Ciudad de nacimiento</string>
    <string name="estatura">Estatura</string>
    <string name="superman">Superman</string>
    <string name="superman_nombre">Clark kent</string>
    <string name="imagen_superman">imagen superman</string>
    <string name="ciudad">Ciudad</string>
    <string name="ciudad_gotica">ciudad gotica</string>
    <string name="occupation">Ocupacion</string>
    <string name="altura">Altura</string>
    <string name="facebook">Facebook</string>
    <string name="poderes">Poderes</string>
    <string name="ocupaccion_value">CEO of Wayne Enterprises</string>
    <string name="altura_value">1.80</string>
    <string name="powers_value">Exceptional martial artist, combat strategy, inexhaustible wealth, brilliant deductive skill, advanced technology</string>
    <string name="facebook_value">facbook/batman</string>

    <string-array name="lista_ciudades">
        <item>Ciudad central</item>
        <item>Ciudad gotica</item>
        <item>Temiscira</item>
        <item>Metrópolis</item>
    </string-array>
</resources>